# AOC

./: Cargo.toml
2015/: Cargo.toml
2015/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day26.rs  day27.rs  day28.rs  day29.rs  day30.rs  day31.rs
2025/: Cargo.toml
2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs
2025/src/input/: day04.txt  day05.txt  day07.txt
src/2015/1/: main.rs
src/2015/2/: main.rs
src/2015/3/: main.rs
src/2015/4/: main.rs
src/2015/5/: main.rs
