[package]
name = "AOC"
version = "0.1.0"
edition = "2021"

[dependencies]
md5 = "0.7.0"


[[bin]]
name = "2015-1"
path = "src/2015/1/main.rs"

[[bin]]
name = "2015-2"
path = "src/2015/2/main.rs"

[[bin]]
name = "2015-3"
path = "src/2015/3/main.rs"

[[bin]]
name = "2015-4"
path = "src/2015/4/main.rs"

[[bin]]
name = "2015-5"
path = "src/2015/5/main.rs"
