[package]
name = "aoc2015"
version = "0.1.0"
edition = "2024"

[dependencies]
md5 = "0.7"

[[bin]]
name = "day01-2015"
path = "src/day01.rs"

[[bin]]
name = "day02-2015"
path = "src/day02.rs"

[[bin]]
name = "day03-2015"
path = "src/day03.rs"

[[bin]]
name = "day04-2015"
path = "src/day04.rs"

[[bin]]
name = "day05-2015"
path = "src/day05.rs"