[package]
name = "aoc2015"
version = "0.1.0"
edition = "2024"

[dependencies]
md5 = "0.7"

[[bin]]
name = "day01-2015"
path = "src/day01.rs"

[[bin]]
name = "day02-2015"
path = "src/day02.rs"

[[bin]]
name = "day03-2015"
path = "src/day03.rs"

[[bin]]
name = "day04-2015"
path = "src/day04.rs"

[[bin]]
name = "day05-2015"
path = "src/day05.rs"

[[bin]]
name = "day06-2015"
path = "src/day06.rs"

[[bin]]
name = "day07-2015"
path = "src/day07.rs"

[[bin]]
name = "day08-2015"
path = "src/day08.rs"

[[bin]]
name = "day09-2015"
path = "src/day09.rs"

[[bin]]
name = "day10-2015"
path = "src/day10.rs"

[[bin]]
name = "day11-2015"
path = "src/day11.rs"

[[bin]]
name = "day12-2015"
path = "src/day12.rs"