[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name = "day01-2025"
path = "src/day01.rs"

[[bin]]
name = "day02-2025"
path = "src/day02.rs"

[[bin]]
name = "day03-2025"
path = "src/day03.rs"

[[bin]]
name = "day04-2025"
path = "src/day04.rs"

[[bin]]
name = "day05-2025"
path = "src/day05.rs"

[[bin]]
name = "day06-2025"
path = "src/day06.rs"

[[bin]]
name = "day07-2025"
path = "src/day07.rs"